--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
                     <i class="fas fa-search text-gray-400 text-lg"></i>
                 </div>
-                <input type="text" id="testSearchInput" placeholder="Search for tests (e.g. CBC, MRI, Ultrasound)..." 
+                <input type="text" id="testSearchInput" placeholder="Search for tests and packages" 
                     class="block w-full pl-12 pr-4 py-4 border-2 border-gray-200 rounded-2xl leading-5 bg-white placeholder-gray-400 focus:outline-none focus:border-accent focus:ring-4 focus:ring-accent/20 transition duration-150 sm:text-lg shadow-sm"
                     oninput="handleSearch(this.value)">
                 
